--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vee-validate/rules": "^4.1.20",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "flatpickr": "^4.6.9",
     "vee-validate": "^4.4.5",
