--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "flatpickr": "^4.6.9",
+    "mitt": "^3.0.0",
     "swiper": "^6.7.1",
     "vee-validate": "^4.4.5",
     "vue": "^3.0.0",
