--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "flatpickr": "^4.6.9",
+    "flipbook-vue": "^0.10.3",
     "mitt": "^3.0.0",
+    "page-flip": "^2.0.7",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "swiper": "^6.7.1",
