--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "core-js": "^3.6.5",
     "flatpickr": "^4.6.9",
     "flipbook-vue": "^0.10.3",
+    "flush-promises": "^1.0.2",
     "mitt": "^3.0.0",
     "page-flip": "^2.0.7",
     "postcss-loader": "^3.0.0",
@@ -55,6 +56,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
+    "@vue/test-utils": "^2.0.0-rc.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
