--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ckeditor/ckeditor5-paragraph": "^28.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^28.0.0",
     "@ckeditor/ckeditor5-vue": "^2.0.1",
+    "@glidejs/glide": "^3.4.1",
     "@popperjs/core": "^2.9.2",
     "@vee-validate/i18n": "^4.1.20",
     "@vee-validate/rules": "^4.1.20",
